--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
