--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "babel-plugin-styled-components": "^2.0.2",
     "next": "12.0.9",
     "react": "17.0.2",
@@ -15,6 +16,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "@types/styled-components": "^5.1.21",
